FlexBisonFiles/SDIM.output
State 29 conflicts: 6 shift/reduce
State 31 conflicts: 5 shift/reduce
State 39 conflicts: 5 shift/reduce
State 40 conflicts: 5 shift/reduce
State 41 conflicts: 5 shift/reduce
State 42 conflicts: 5 shift/reduce
State 43 conflicts: 5 shift/reduce
State 44 conflicts: 5 shift/reduce
State 45 conflicts: 5 shift/reduce
State 50 conflicts: 6 shift/reduce
State 56 conflicts: 5 shift/reduce
State 57 conflicts: 5 shift/reduce
State 59 conflicts: 5 shift/reduce
State 72 conflicts: 5 shift/reduce
State 73 conflicts: 5 shift/reduce
State 74 conflicts: 5 shift/reduce
State 75 conflicts: 5 shift/reduce
State 76 conflicts: 5 shift/reduce
State 79 conflicts: 5 shift/reduce
State 80 conflicts: 5 shift/reduce
State 81 conflicts: 5 shift/reduce
State 82 conflicts: 5 shift/reduce
State 83 conflicts: 5 shift/reduce
State 84 conflicts: 5 shift/reduce
State 85 conflicts: 5 shift/reduce
State 86 conflicts: 5 shift/reduce
State 87 conflicts: 5 shift/reduce
State 88 conflicts: 5 shift/reduce
State 89 conflicts: 5 shift/reduce
State 90 conflicts: 5 shift/reduce
State 91 conflicts: 5 shift/reduce
State 92 conflicts: 5 shift/reduce
State 93 conflicts: 5 shift/reduce
State 94 conflicts: 5 shift/reduce
State 95 conflicts: 5 shift/reduce
State 96 conflicts: 5 shift/reduce
State 97 conflicts: 5 shift/reduce
State 98 conflicts: 5 shift/reduce
State 99 conflicts: 5 shift/reduce
State 100 conflicts: 6 shift/reduce
State 139 conflicts: 5 shift/reduce
State 143 conflicts: 6 shift/reduce
State 145 conflicts: 6 shift/reduce
State 147 conflicts: 5 shift/reduce
State 153 conflicts: 6 shift/reduce


Grammar

    0 $accept: module EOF

    1 module: "module" IDENTIFIER '{' function '}'

    2 statement: complex_statment '}'
    3          | "return" expr ';'
    4          | var_defs ';'
    5          | "if" '(' expr ')' '{' statement '}'
    6          | "while" '(' expr ')' '{' statement '}'
    7          | "for" '(' var_def1 ';' expr ';' expr ')' '{' statement '}'
    8          | "print" '(' expr ')' ';'
    9          | expr ';'
   10          | ';'

   11 complex_statment: '{'
   12                 | complex_statment statement

   13 function: "func" IDENTIFIER '(' func_args ')' '{' statement '}'
   14         | %empty

   15 func_args: func_arg
   16          | %empty

   17 func_arg: func_arg ',' typed_identifier
   18         | typed_identifier

   19 var_defs: "var"
   20         | var_def1
   21         | var_defs ',' var_def1

   22 var_def1: typed_identifier '=' expr
   23         | typed_identifier

   24 typed_identifier: type IDENTIFIER

   25 type: "UInt8"
   26     | "UInt16"
   27     | "UInt32"
   28     | "UInt64"
   29     | "Int8"
   30     | "Int16"
   31     | "Int32"
   32     | "Int64"
   33     | "F32"
   34     | "F64"
   35     | "string"

   36 expr: NUMERIC_LITERAL
   37     | STRING_LITERAL
   38     | IDENTIFIER
   39     | '(' expr ')'
   40     | expr '(' expr ')'
   41     | expr '(' ')'
   42     | expr '=' expr
   43     | expr '+' expr
   44     | expr '-' expr
   45     | expr '*' expr
   46     | expr '/' expr
   47     | expr '%' expr
   48     | expr "+=" expr
   49     | expr "-=" expr
   50     | expr "&=" expr
   51     | expr "|=" expr
   52     | expr "^=" expr
   53     | expr "*=" expr
   54     | expr "/=" expr
   55     | expr "%=" expr
   56     | expr "==" expr
   57     | expr "!=" expr
   58     | expr '<' expr
   59     | expr "<=" expr
   60     | expr '>' expr
   61     | expr ">=" expr
   62     | expr "||" expr
   63     | expr "&&" expr
   64     | expr '|' expr
   65     | expr '&' expr
   66     | expr '^' expr
   67     | '-' expr
   68     | '+' expr
   69     | '!' expr
   70     | '~' expr
   71     | "++" expr
   72     | "--" expr
   73     | expr "++"
   74     | expr "--"
   75     | %empty


Terminals, with rules where they appear

EOF (0) 0
'!' (33) 69
'%' (37) 47
'&' (38) 65
'(' (40) 5 6 7 8 13 39 40 41
')' (41) 5 6 7 8 13 39 40 41
'*' (42) 45
'+' (43) 43 68
',' (44) 17 21
'-' (45) 44 67
'/' (47) 46
';' (59) 3 4 7 8 9 10
'<' (60) 58
'=' (61) 22 42
'>' (62) 60
'^' (94) 66
'{' (123) 1 5 6 7 11 13
'|' (124) 64
'}' (125) 1 2 5 6 7 13
'~' (126) 70
error (256)
"module" (258) 1
"return" (259) 3
"print" (260) 8
"while" (261) 6
"for" (262) 7
"if" (263) 5
STRING_LITERAL (264) 37
NUMERIC_LITERAL (265) 36
IDENTIFIER (266) 1 13 24 38
"UInt8" (267) 25
"UInt16" (268) 26
"UInt32" (269) 27
"UInt64" (270) 28
"Int8" (271) 29
"Int16" (272) 30
"Int32" (273) 31
"Int64" (274) 32
"F32" (275) 33
"F64" (276) 34
"string" (277) 35
"||" (278) 62
"&&" (279) 63
"==" (280) 56
"!=" (281) 57
"++" (282) 71 73
"--" (283) 72 74
"+=" (284) 48
"-=" (285) 49
"*=" (286) 53
"/=" (287) 54
"%=" (288) 55
"&=" (289) 50
"|=" (290) 51
"^=" (291) 52
">=" (292) 61
"<=" (293) 59
"func" (294) 13
"var" (295) 19


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
module (61)
    on left: 1, on right: 0
statement (62)
    on left: 2 3 4 5 6 7 8 9 10, on right: 5 6 7 12 13
complex_statment (63)
    on left: 11 12, on right: 2 12
function (64)
    on left: 13 14, on right: 1
func_args (65)
    on left: 15 16, on right: 13
func_arg (66)
    on left: 17 18, on right: 15 17
var_defs (67)
    on left: 19 20 21, on right: 4 21
var_def1 (68)
    on left: 22 23, on right: 7 20 21
typed_identifier (69)
    on left: 24, on right: 17 18 22 23
type (70)
    on left: 25 26 27 28 29 30 31 32 33 34 35, on right: 24
expr (71)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75, on right: 3 5 6 7 8 9 22 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74


State 0

    0 $accept: . module EOF
    1 module: . "module" IDENTIFIER '{' function '}'

    "module"  shift, and go to state 1

    module  go to state 2


State 1

    1 module: "module" . IDENTIFIER '{' function '}'

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: module . EOF

    EOF  shift, and go to state 4


State 3

    1 module: "module" IDENTIFIER . '{' function '}'

    '{'  shift, and go to state 5


State 4

    0 $accept: module EOF .

    $default  accept


State 5

    1 module: "module" IDENTIFIER '{' . function '}'
   13 function: . "func" IDENTIFIER '(' func_args ')' '{' statement '}'
   14         | . %empty  ['}']

    "func"  shift, and go to state 6

    $default  reduce using rule 14 (function)

    function  go to state 7


State 6

   13 function: "func" . IDENTIFIER '(' func_args ')' '{' statement '}'

    IDENTIFIER  shift, and go to state 8


State 7

    1 module: "module" IDENTIFIER '{' function . '}'

    '}'  shift, and go to state 9


State 8

   13 function: "func" IDENTIFIER . '(' func_args ')' '{' statement '}'

    '('  shift, and go to state 10


State 9

    1 module: "module" IDENTIFIER '{' function '}' .

    $default  reduce using rule 1 (module)


State 10

   13 function: "func" IDENTIFIER '(' . func_args ')' '{' statement '}'
   15 func_args: . func_arg
   16          | . %empty  [')']
   17 func_arg: . func_arg ',' typed_identifier
   18         | . typed_identifier
   24 typed_identifier: . type IDENTIFIER
   25 type: . "UInt8"
   26     | . "UInt16"
   27     | . "UInt32"
   28     | . "UInt64"
   29     | . "Int8"
   30     | . "Int16"
   31     | . "Int32"
   32     | . "Int64"
   33     | . "F32"
   34     | . "F64"
   35     | . "string"

    "UInt8"   shift, and go to state 11
    "UInt16"  shift, and go to state 12
    "UInt32"  shift, and go to state 13
    "UInt64"  shift, and go to state 14
    "Int8"    shift, and go to state 15
    "Int16"   shift, and go to state 16
    "Int32"   shift, and go to state 17
    "Int64"   shift, and go to state 18
    "F32"     shift, and go to state 19
    "F64"     shift, and go to state 20
    "string"  shift, and go to state 21

    $default  reduce using rule 16 (func_args)

    func_args         go to state 22
    func_arg          go to state 23
    typed_identifier  go to state 24
    type              go to state 25


State 11

   25 type: "UInt8" .

    $default  reduce using rule 25 (type)


State 12

   26 type: "UInt16" .

    $default  reduce using rule 26 (type)


State 13

   27 type: "UInt32" .

    $default  reduce using rule 27 (type)


State 14

   28 type: "UInt64" .

    $default  reduce using rule 28 (type)


State 15

   29 type: "Int8" .

    $default  reduce using rule 29 (type)


State 16

   30 type: "Int16" .

    $default  reduce using rule 30 (type)


State 17

   31 type: "Int32" .

    $default  reduce using rule 31 (type)


State 18

   32 type: "Int64" .

    $default  reduce using rule 32 (type)


State 19

   33 type: "F32" .

    $default  reduce using rule 33 (type)


State 20

   34 type: "F64" .

    $default  reduce using rule 34 (type)


State 21

   35 type: "string" .

    $default  reduce using rule 35 (type)


State 22

   13 function: "func" IDENTIFIER '(' func_args . ')' '{' statement '}'

    ')'  shift, and go to state 26


State 23

   15 func_args: func_arg .  [')']
   17 func_arg: func_arg . ',' typed_identifier

    ','  shift, and go to state 27

    $default  reduce using rule 15 (func_args)


State 24

   18 func_arg: typed_identifier .

    $default  reduce using rule 18 (func_arg)


State 25

   24 typed_identifier: type . IDENTIFIER

    IDENTIFIER  shift, and go to state 28


State 26

   13 function: "func" IDENTIFIER '(' func_args ')' . '{' statement '}'

    '{'  shift, and go to state 29


State 27

   17 func_arg: func_arg ',' . typed_identifier
   24 typed_identifier: . type IDENTIFIER
   25 type: . "UInt8"
   26     | . "UInt16"
   27     | . "UInt32"
   28     | . "UInt64"
   29     | . "Int8"
   30     | . "Int16"
   31     | . "Int32"
   32     | . "Int64"
   33     | . "F32"
   34     | . "F64"
   35     | . "string"

    "UInt8"   shift, and go to state 11
    "UInt16"  shift, and go to state 12
    "UInt32"  shift, and go to state 13
    "UInt64"  shift, and go to state 14
    "Int8"    shift, and go to state 15
    "Int16"   shift, and go to state 16
    "Int32"   shift, and go to state 17
    "Int64"   shift, and go to state 18
    "F32"     shift, and go to state 19
    "F64"     shift, and go to state 20
    "string"  shift, and go to state 21

    typed_identifier  go to state 30
    type              go to state 25


State 28

   24 typed_identifier: type IDENTIFIER .

    $default  reduce using rule 24 (typed_identifier)


State 29

    2 statement: . complex_statment '}'
    3          | . "return" expr ';'
    4          | . var_defs ';'
    5          | . "if" '(' expr ')' '{' statement '}'
    6          | . "while" '(' expr ')' '{' statement '}'
    7          | . "for" '(' var_def1 ';' expr ';' expr ')' '{' statement '}'
    8          | . "print" '(' expr ')' ';'
    9          | . expr ';'
   10          | . ';'
   11 complex_statment: . '{'
   12                 | . complex_statment statement
   13 function: "func" IDENTIFIER '(' func_args ')' '{' . statement '}'
   19 var_defs: . "var"
   20         | . var_def1
   21         | . var_defs ',' var_def1
   22 var_def1: . typed_identifier '=' expr
   23         | . typed_identifier
   24 typed_identifier: . type IDENTIFIER
   25 type: . "UInt8"
   26     | . "UInt16"
   27     | . "UInt32"
   28     | . "UInt64"
   29     | . "Int8"
   30     | . "Int16"
   31     | . "Int32"
   32     | . "Int64"
   33     | . "F32"
   34     | . "F64"
   35     | . "string"
   36 expr: . NUMERIC_LITERAL
   37     | . STRING_LITERAL
   38     | . IDENTIFIER
   39     | . '(' expr ')'
   40     | . expr '(' expr ')'
   41     | . expr '(' ')'
   42     | . expr '=' expr
   43     | . expr '+' expr
   44     | . expr '-' expr
   45     | . expr '*' expr
   46     | . expr '/' expr
   47     | . expr '%' expr
   48     | . expr "+=" expr
   49     | . expr "-=" expr
   50     | . expr "&=" expr
   51     | . expr "|=" expr
   52     | . expr "^=" expr
   53     | . expr "*=" expr
   54     | . expr "/=" expr
   55     | . expr "%=" expr
   56     | . expr "==" expr
   57     | . expr "!=" expr
   58     | . expr '<' expr
   59     | . expr "<=" expr
   60     | . expr '>' expr
   61     | . expr ">=" expr
   62     | . expr "||" expr
   63     | . expr "&&" expr
   64     | . expr '|' expr
   65     | . expr '&' expr
   66     | . expr '^' expr
   67     | . '-' expr
   68     | . '+' expr
   69     | . '!' expr
   70     | . '~' expr
   71     | . "++" expr
   72     | . "--" expr
   73     | . expr "++"
   74     | . expr "--"
   75     | . %empty  ["||", "&&", "==", "!=", "++", "--", "+=", "-=", "*=", "/=", "%=", '=', "&=", "|=", "^=", '|', '^', '&', '>', ">=", '<', "<=", '+', '-', '*', '/', '%', '(', ';']

    "return"         shift, and go to state 31
    "print"          shift, and go to state 32
    "while"          shift, and go to state 33
    "for"            shift, and go to state 34
    "if"             shift, and go to state 35
    STRING_LITERAL   shift, and go to state 36
    NUMERIC_LITERAL  shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    "UInt8"          shift, and go to state 11
    "UInt16"         shift, and go to state 12
    "UInt32"         shift, and go to state 13
    "UInt64"         shift, and go to state 14
    "Int8"           shift, and go to state 15
    "Int16"          shift, and go to state 16
    "Int32"          shift, and go to state 17
    "Int64"          shift, and go to state 18
    "F32"            shift, and go to state 19
    "F64"            shift, and go to state 20
    "string"         shift, and go to state 21
    "++"             shift, and go to state 39
    "--"             shift, and go to state 40
    '+'              shift, and go to state 41
    '-'              shift, and go to state 42
    '!'              shift, and go to state 43
    '~'              shift, and go to state 44
    '('              shift, and go to state 45
    '{'              shift, and go to state 46
    ';'              shift, and go to state 47
    "var"            shift, and go to state 48

    "++"      [reduce using rule 75 (expr)]
    "--"      [reduce using rule 75 (expr)]
    '+'       [reduce using rule 75 (expr)]
    '-'       [reduce using rule 75 (expr)]
    '('       [reduce using rule 75 (expr)]
    ';'       [reduce using rule 75 (expr)]
    $default  reduce using rule 75 (expr)

    statement         go to state 49
    complex_statment  go to state 50
    var_defs          go to state 51
    var_def1          go to state 52
    typed_identifier  go to state 53
    type              go to state 25
    expr              go to state 54


State 30

   17 func_arg: func_arg ',' typed_identifier .

    $default  reduce using rule 17 (func_arg)


State 31

    3 statement: "return" . expr ';'
   36 expr: . NUMERIC_LITERAL
   37     | . STRING_LITERAL
   38     | . IDENTIFIER
   39     | . '(' expr ')'
   40     | . expr '(' expr ')'
   41     | . expr '(' ')'
   42     | . expr '=' expr
   43     | . expr '+' expr
   44     | . expr '-' expr
   45     | . expr '*' expr
   46     | . expr '/' expr
   47     | . expr '%' expr
   48     | . expr "+=" expr
   49     | . expr "-=" expr
   50     | . expr "&=" expr
   51     | . expr "|=" expr
   52     | . expr "^=" expr
   53     | . expr "*=" expr
   54     | . expr "/=" expr
   55     | . expr "%=" expr
   56     | . expr "==" expr
   57     | . expr "!=" expr
   58     | . expr '<' expr
   59     | . expr "<=" expr
   60     | . expr '>' expr
   61     | . expr ">=" expr
   62     | . expr "||" expr
   63     | . expr "&&" expr
   64     | . expr '|' expr
   65     | . expr '&' expr
   66     | . expr '^' expr
   67     | . '-' expr
   68     | . '+' expr
   69     | . '!' expr
   70     | . '~' expr
   71     | . "++" expr
   72     | . "--" expr
   73     | . expr "++"
   74     | . expr "--"
   75     | . %empty  ["||", "&&", "==", "!=", "++", "--", "+=", "-=", "*=", "/=", "%=", '=', "&=", "|=", "^=", '|', '^', '&', '>', ">=", '<', "<=", '+', '-', '*', '/', '%', '(', ';']

    STRING_LITERAL   shift, and go to state 36
    NUMERIC_LITERAL  shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    "++"             shift, and go to state 39
    "--"             shift, and go to state 40
    '+'              shift, and go to state 41
    '-'              shift, and go to state 42
    '!'              shift, and go to state 43
    '~'              shift, and go to state 44
    '('              shift, and go to state 45

    "++"      [reduce using rule 75 (expr)]
    "--"      [reduce using rule 75 (expr)]
    '+'       [reduce using rule 75 (expr)]
    '-'       [reduce using rule 75 (expr)]
    '('       [reduce using rule 75 (expr)]
    $default  reduce using rule 75 (expr)

    expr  go to state 55


State 32

    8 statement: "print" . '(' expr ')' ';'

    '('  shift, and go to state 56


State 33

    6 statement: "while" . '(' expr ')' '{' statement '}'

    '('  shift, and go to state 57


State 34

    7 statement: "for" . '(' var_def1 ';' expr ';' expr ')' '{' statement '}'

    '('  shift, and go to state 58


State 35

    5 statement: "if" . '(' expr ')' '{' statement '}'

    '('  shift, and go to state 59


State 36

   37 expr: STRING_LITERAL .

    $default  reduce using rule 37 (expr)


State 37

   36 expr: NUMERIC_LITERAL .

    $default  reduce using rule 36 (expr)


State 38

   38 expr: IDENTIFIER .

    $default  reduce using rule 38 (expr)


State 39

   36 expr: . NUMERIC_LITERAL
   37     | . STRING_LITERAL
   38     | . IDENTIFIER
   39     | . '(' expr ')'
   40     | . expr '(' expr ')'
   41     | . expr '(' ')'
   42     | . expr '=' expr
   43     | . expr '+' expr
   44     | . expr '-' expr
   45     | . expr '*' expr
   46     | . expr '/' expr
   47     | . expr '%' expr
   48     | . expr "+=" expr
   49     | . expr "-=" expr
   50     | . expr "&=" expr
   51     | . expr "|=" expr
   52     | . expr "^=" expr
   53     | . expr "*=" expr
   54     | . expr "/=" expr
   55     | . expr "%=" expr
   56     | . expr "==" expr
   57     | . expr "!=" expr
   58     | . expr '<' expr
   59     | . expr "<=" expr
   60     | . expr '>' expr
   61     | . expr ">=" expr
   62     | . expr "||" expr
   63     | . expr "&&" expr
   64     | . expr '|' expr
   65     | . expr '&' expr
   66     | . expr '^' expr
   67     | . '-' expr
   68     | . '+' expr
   69     | . '!' expr
   70     | . '~' expr
   71     | . "++" expr
   71     | "++" . expr
   72     | . "--" expr
   73     | . expr "++"
   74     | . expr "--"
   75     | . %empty  ["||", "&&", "==", "!=", "++", "--", "+=", "-=", "*=", "/=", "%=", ',', '=', "&=", "|=", "^=", '|', '^', '&', '>', ">=", '<', "<=", '+', '-', '*', '/', '%', '(', ';', ')']

    STRING_LITERAL   shift, and go to state 36
    NUMERIC_LITERAL  shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    "++"             shift, and go to state 39
    "--"             shift, and go to state 40
    '+'              shift, and go to state 41
    '-'              shift, and go to state 42
    '!'              shift, and go to state 43
    '~'              shift, and go to state 44
    '('              shift, and go to state 45

    "++"      [reduce using rule 75 (expr)]
    "--"      [reduce using rule 75 (expr)]
    '+'       [reduce using rule 75 (expr)]
    '-'       [reduce using rule 75 (expr)]
    '('       [reduce using rule 75 (expr)]
    $default  reduce using rule 75 (expr)

    expr  go to state 60


State 40

   36 expr: . NUMERIC_LITERAL
   37     | . STRING_LITERAL
   38     | . IDENTIFIER
   39     | . '(' expr ')'
   40     | . expr '(' expr ')'
   41     | . expr '(' ')'
   42     | . expr '=' expr
   43     | . expr '+' expr
   44     | . expr '-' expr
   45     | . expr '*' expr
   46     | . expr '/' expr
   47     | . expr '%' expr
   48     | . expr "+=" expr
   49     | . expr "-=" expr
   50     | . expr "&=" expr
   51     | . expr "|=" expr
   52     | . expr "^=" expr
   53     | . expr "*=" expr
   54     | . expr "/=" expr
   55     | . expr "%=" expr
   56     | . expr "==" expr
   57     | . expr "!=" expr
   58     | . expr '<' expr
   59     | . expr "<=" expr
   60     | . expr '>' expr
   61     | . expr ">=" expr
   62     | . expr "||" expr
   63     | . expr "&&" expr
   64     | . expr '|' expr
   65     | . expr '&' expr
   66     | . expr '^' expr
   67     | . '-' expr
   68     | . '+' expr
   69     | . '!' expr
   70     | . '~' expr
   71     | . "++" expr
   72     | . "--" expr
   72     | "--" . expr
   73     | . expr "++"
   74     | . expr "--"
   75     | . %empty  ["||", "&&", "==", "!=", "++", "--", "+=", "-=", "*=", "/=", "%=", ',', '=', "&=", "|=", "^=", '|', '^', '&', '>', ">=", '<', "<=", '+', '-', '*', '/', '%', '(', ';', ')']

    STRING_LITERAL   shift, and go to state 36
    NUMERIC_LITERAL  shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    "++"             shift, and go to state 39
    "--"             shift, and go to state 40
    '+'              shift, and go to state 41
    '-'              shift, and go to state 42
    '!'              shift, and go to state 43
    '~'              shift, and go to state 44
    '('              shift, and go to state 45

    "++"      [reduce using rule 75 (expr)]
    "--"      [reduce using rule 75 (expr)]
    '+'       [reduce using rule 75 (expr)]
    '-'       [reduce using rule 75 (expr)]
    '('       [reduce using rule 75 (expr)]
    $default  reduce using rule 75 (expr)

    expr  go to state 61


State 41

   36 expr: . NUMERIC_LITERAL
   37     | . STRING_LITERAL
   38     | . IDENTIFIER
   39     | . '(' expr ')'
   40     | . expr '(' expr ')'
   41     | . expr '(' ')'
   42     | . expr '=' expr
   43     | . expr '+' expr
   44     | . expr '-' expr
   45     | . expr '*' expr
   46     | . expr '/' expr
   47     | . expr '%' expr
   48     | . expr "+=" expr
   49     | . expr "-=" expr
   50     | . expr "&=" expr
   51     | . expr "|=" expr
   52     | . expr "^=" expr
   53     | . expr "*=" expr
   54     | . expr "/=" expr
   55     | . expr "%=" expr
   56     | . expr "==" expr
   57     | . expr "!=" expr
   58     | . expr '<' expr
   59     | . expr "<=" expr
   60     | . expr '>' expr
   61     | . expr ">=" expr
   62     | . expr "||" expr
   63     | . expr "&&" expr
   64     | . expr '|' expr
   65     | . expr '&' expr
   66     | . expr '^' expr
   67     | . '-' expr
   68     | . '+' expr
   68     | '+' . expr
   69     | . '!' expr
   70     | . '~' expr
   71     | . "++" expr
   72     | . "--" expr
   73     | . expr "++"
   74     | . expr "--"
   75     | . %empty  ["||", "&&", "==", "!=", "++", "--", "+=", "-=", "*=", "/=", "%=", ',', '=', "&=", "|=", "^=", '|', '^', '&', '>', ">=", '<', "<=", '+', '-', '*', '/', '%', '(', ';', ')']

    STRING_LITERAL   shift, and go to state 36
    NUMERIC_LITERAL  shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    "++"             shift, and go to state 39
    "--"             shift, and go to state 40
    '+'              shift, and go to state 41
    '-'              shift, and go to state 42
    '!'              shift, and go to state 43
    '~'              shift, and go to state 44
    '('              shift, and go to state 45

    "++"      [reduce using rule 75 (expr)]
    "--"      [reduce using rule 75 (expr)]
    '+'       [reduce using rule 75 (expr)]
    '-'       [reduce using rule 75 (expr)]
    '('       [reduce using rule 75 (expr)]
    $default  reduce using rule 75 (expr)

    expr  go to state 62


State 42

   36 expr: . NUMERIC_LITERAL
   37     | . STRING_LITERAL
   38     | . IDENTIFIER
   39     | . '(' expr ')'
   40     | . expr '(' expr ')'
   41     | . expr '(' ')'
   42     | . expr '=' expr
   43     | . expr '+' expr
   44     | . expr '-' expr
   45     | . expr '*' expr
   46     | . expr '/' expr
   47     | . expr '%' expr
   48     | . expr "+=" expr
   49     | . expr "-=" expr
   50     | . expr "&=" expr
   51     | . expr "|=" expr
   52     | . expr "^=" expr
   53     | . expr "*=" expr
   54     | . expr "/=" expr
   55     | . expr "%=" expr
   56     | . expr "==" expr
   57     | . expr "!=" expr
   58     | . expr '<' expr
   59     | . expr "<=" expr
   60     | . expr '>' expr
   61     | . expr ">=" expr
   62     | . expr "||" expr
   63     | . expr "&&" expr
   64     | . expr '|' expr
   65     | . expr '&' expr
   66     | . expr '^' expr
   67     | . '-' expr
   67     | '-' . expr
   68     | . '+' expr
   69     | . '!' expr
   70     | . '~' expr
   71     | . "++" expr
   72     | . "--" expr
   73     | . expr "++"
   74     | . expr "--"
   75     | . %empty  ["||", "&&", "==", "!=", "++", "--", "+=", "-=", "*=", "/=", "%=", ',', '=', "&=", "|=", "^=", '|', '^', '&', '>', ">=", '<', "<=", '+', '-', '*', '/', '%', '(', ';', ')']

    STRING_LITERAL   shift, and go to state 36
    NUMERIC_LITERAL  shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    "++"             shift, and go to state 39
    "--"             shift, and go to state 40
    '+'              shift, and go to state 41
    '-'              shift, and go to state 42
    '!'              shift, and go to state 43
    '~'              shift, and go to state 44
    '('              shift, and go to state 45

    "++"      [reduce using rule 75 (expr)]
    "--"      [reduce using rule 75 (expr)]
    '+'       [reduce using rule 75 (expr)]
    '-'       [reduce using rule 75 (expr)]
    '('       [reduce using rule 75 (expr)]
    $default  reduce using rule 75 (expr)

    expr  go to state 63


State 43

   36 expr: . NUMERIC_LITERAL
   37     | . STRING_LITERAL
   38     | . IDENTIFIER
   39     | . '(' expr ')'
   40     | . expr '(' expr ')'
   41     | . expr '(' ')'
   42     | . expr '=' expr
   43     | . expr '+' expr
   44     | . expr '-' expr
   45     | . expr '*' expr
   46     | . expr '/' expr
   47     | . expr '%' expr
   48     | . expr "+=" expr
   49     | . expr "-=" expr
   50     | . expr "&=" expr
   51     | . expr "|=" expr
   52     | . expr "^=" expr
   53     | . expr "*=" expr
   54     | . expr "/=" expr
   55     | . expr "%=" expr
   56     | . expr "==" expr
   57     | . expr "!=" expr
   58     | . expr '<' expr
   59     | . expr "<=" expr
   60     | . expr '>' expr
   61     | . expr ">=" expr
   62     | . expr "||" expr
   63     | . expr "&&" expr
   64     | . expr '|' expr
   65     | . expr '&' expr
   66     | . expr '^' expr
   67     | . '-' expr
   68     | . '+' expr
   69     | . '!' expr
   69     | '!' . expr
   70     | . '~' expr
   71     | . "++" expr
   72     | . "--" expr
   73     | . expr "++"
   74     | . expr "--"
   75     | . %empty  ["||", "&&", "==", "!=", "++", "--", "+=", "-=", "*=", "/=", "%=", ',', '=', "&=", "|=", "^=", '|', '^', '&', '>', ">=", '<', "<=", '+', '-', '*', '/', '%', '(', ';', ')']

    STRING_LITERAL   shift, and go to state 36
    NUMERIC_LITERAL  shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    "++"             shift, and go to state 39
    "--"             shift, and go to state 40
    '+'              shift, and go to state 41
    '-'              shift, and go to state 42
    '!'              shift, and go to state 43
    '~'              shift, and go to state 44
    '('              shift, and go to state 45

    "++"      [reduce using rule 75 (expr)]
    "--"      [reduce using rule 75 (expr)]
    '+'       [reduce using rule 75 (expr)]
    '-'       [reduce using rule 75 (expr)]
    '('       [reduce using rule 75 (expr)]
    $default  reduce using rule 75 (expr)

    expr  go to state 64


State 44
